# geelweb-django-contactform

./: .gitignore  .travis.yml  CHANGELOG.rst  LICENSE.rst  MANIFEST.in  README.md  README.rst  runtests.py  setup.cfg  setup.py
.github/workflows/: python-app.yml  run-tests.yml
contactform/: forms.py  tests.py  urls.py  views.py
contactform/locale/en/LC_MESSAGES/: django.mo  django.po
contactform/locale/fr/LC_MESSAGES/: django.mo  django.po
contactform/templates/contactform/: base.html  contact.html  form.html  form_bootstrap.html  form_uikit.html  message.txt  thanks.html
contactform/templates/contactform/tags/: contact_form.html
contactform/templatetags/: contact_form.py
docs/: Makefile  conf.py  getting-started.rst  index.rst  install.rst  settings.rst  templates.rst  templatetags.rst
src/django_contactform.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/geelweb/django/contactform/: models.py  tests.py  views.py
src/geelweb/django/contactform/locale/fr/LC_MESSAGES/: django.mo  django.po
tests/: runtest.py  test_settings.py  urls.py  views.py
tests/templates/: custom.html
tests/templates/contactform/: contact.html  thanks.html
