[metadata]
name = django-contactform
version = 2.0.0
description = A Django app to display simple contact form.
long_description = file: README.rst, LICENSE.rst
url = https://github.com/geelweb/geelweb-django-contactform
author = Guillaume Luchet
author_email = guillaume@geelweb.org
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.0
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = True
packages = find:
